# macmahon-squares

./: CMakeLists.txt  Makefile  board.cpp  board.hpp  helper.hpp  main.cpp  piece.cpp  piece.hpp  puzzlegame.cpp  puzzlegame.hpp
data/: 4x4_colorv2.txt  5x5_colorv2.txt  6x6_colorv2.txt
